--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -14,10 +14,38 @@
 }
 
 .ModalOpen {
-	opacity: 1;
-	transform: translateY(0);
+	animation: openModal 400ms ease-out forwards;
 }
 .ModalClosed {
-	opacity: 0;
-	transform: translateY(-100vh);
+	animation: closeModal 1000ms ease-out forwards;
+}
+
+@keyframes openModal {
+	0% {
+		opacity: 0;
+		transform: translateY(-100vh);
+	}
+	50% {
+		opacity: 0.5;
+		transform: translateY(10vh);
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+@keyframes closeModal {
+	0% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+	50% {
+		opacity: 0.8;
+		transform: translateY(60vh);
+	}
+	100% {
+		opacity: 0;
+		transform: translateY(-100vh);
+	}
 }
